RESOLVED FIXED42139
WebKitTestRunner does not block remote resources or complain about them
https://bugs.webkit.org/show_bug.cgi?id=42139
Summary WebKitTestRunner does not block remote resources or complain about them
Maciej Stachowiak
Reported 2010-07-12 21:52:27 PDT
DumpRenderTree blocks access to remote resources and logs a message to ensure that test behavior does not depend on network conditions. To implement this for WebKit2 will require some equivalent of a resource load delegate - perhaps in the injected bundle. At least the following tests are affected: canvas/philip/tests/security.pattern.canvas.timing.html canvas/philip/tests/security.pattern.create.html
Attachments
Patch (11.05 KB, patch)
2011-02-07 01:40 PST, Maciej Stachowiak
koivisto: review+
Maciej Stachowiak
Comment 1 2010-07-12 22:11:58 PDT
Maciej Stachowiak
Comment 2 2011-02-07 01:40:01 PST
Maciej Stachowiak
Comment 3 2011-02-07 01:47:26 PST
WebKit Review Bot
Comment 4 2011-02-07 02:57:36 PST
http://trac.webkit.org/changeset/77794 might have broken SnowLeopard Intel Release (WebKit2 Tests)
Csaba Osztrogonác
Comment 5 2011-02-07 03:19:57 PST
Balazs Kelemen
Comment 6 2011-02-09 08:51:53 PST
The KURL dependency breaks InjectedBundle on Qt: https://bugs.webkit.org/show_bug.cgi?id=54109
Note You need to log in before you can comment on or make changes to this bug.