2011-02-07  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Antti Koivisto.

        WebKitTestRunner does not block remote resources or complain about them
        https://bugs.webkit.org/show_bug.cgi?id=42139
        <rdar://problem/8183942>

        * Configurations/WebCore.xcconfig: Allow WebKitTestRunner to link
        WebCore.
        * WebCore.exp.in: Export a handful of KURL symbols.
2011-02-07  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Antti Koivisto.

        WebKitTestRunner does not block remote resources or complain about them
        https://bugs.webkit.org/show_bug.cgi?id=42139
        <rdar://problem/8183942>

        * platform/mac-wk2/Skipped: Unskip formerly skipped tests.
2011-02-07  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Antti Koivisto.

        WebKitTestRunner does not block remote resources or complain about them
        https://bugs.webkit.org/show_bug.cgi?id=42139
        <rdar://problem/8183942>

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::willSendRequestForFrame): Implement the required
        checks (using KURL, to avoid need to invent a whole URL API).
        * WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj: Link WebCore
        directly to get at KURL symbols.


Canonical link: https://commits.webkit.org/67856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77794 268f45cc-cd09-0410-ab3c-d52691b4dbfc